--- a/app/scan.html
+++ b/app/scan.html
@@ -214,7 +214,7 @@
 
     <div id="rows"></div>
 
-    <div class="footerText">@ravit</div>
+    <div class="footerText">@oikawa</div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
